--- a/hdesign/en.html
+++ b/hdesign/en.html
@@ -7,7 +7,7 @@
 	
     <!-- Mobile Specific Metas
   ================================================== -->
-    <meta name="viewport" content="width=device-width,minimum-scale=0.99.95, initial-scale=1, maximum-scale=1, user-scalable=1">
+    <meta name="viewport" minimum-scale=0.9, initial-scale=0.9, maximum-scale=0.9, user-scalable=1">
     <!-- CSS
   ================================================== -->
 <link href="new.css" rel="stylesheet"> 
