--- a/hdesign/en.html
+++ b/hdesign/en.html
@@ -7,7 +7,7 @@
 	
     <!-- Mobile Specific Metas
   ================================================== -->
-    <meta name="viewport" minimum-scale=0.9, initial-scale=0.9, maximum-scale=0.9, user-scalable=1">
+    <meta name="viewport" content="width=device-width,minimum-scale=0.9, initial-scale=0.9, maximum-scale=0.9, user-scalable=1">
     <!-- CSS
   ================================================== -->
 <link href="new.css" rel="stylesheet"> 
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="assets/css/style.css"> 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <!--[if lt IE 9]>
+      <script src="html5shiv.min.js"></script>
+      <script src="respond.min.js"></script>
     <![endif]-->
 
 
