--- a/hdesign/index.html
+++ b/hdesign/index.html
@@ -76,6 +76,8 @@
     			</div>
     		</div>
     	</div>
+<button class ="btn btn-default" id="logout">logout</button>
+        
     </section>
   <div class="leaf leaf1">
      <div>  <img src="ad/7.png" height="75px" width="75px"></img></div>
